--- a/ProjectCDTT_63132701/Views/don_hang/Index.cshtml
+++ b/ProjectCDTT_63132701/Views/don_hang/Index.cshtml
@@ -60,7 +60,7 @@
         </tbody>
     </table>
 
-    <div class="d-flex justify-content-end">
+    <div class="d-flex justify-content-end" style="margin-bottom: 50px;">
         <h4>Tổng Tiền: @String.Format("{0:N0} ₫", Model.TongTien) </h4>
     </div>
     @* <div class="text-center mt-4">
