--- a/ProjectCDTT_63132701/Views/san_pham/Bong_Tai.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Bong_Tai.cshtml
@@ -23,7 +23,7 @@
 
     <h2>Bông Tai Bạc</h2>
 
-    @using (Html.BeginForm("Nhan", "San_pham", FormMethod.Get))
+    @using (Html.BeginForm("Bong_Tai", "San_pham", FormMethod.Get))
     {
         <div class="filter-container">
             <div class="filter-options">
