--- a/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
@@ -32,9 +32,13 @@
             <div class="button-group">
                 <button class=" btn-buy-now">Mua ngay</button>
                 <button type="submit" formaction="@Url.Action("AddToCart", "San_pham")" formmethod="post" class="btn btn-add-to-cart">
-                    <i class="fa fa-shopping-bag"></i>
-                    <span>Thêm vào giỏ</span>
+                    <div class="top-row">
+                        <i class="fa fa-shopping-bag"></i>
+                        <span class="text-them">Thêm</span>
+                    </div>
+                    <span class="text-vao-gio">vào giỏ</span>
                 </button>
+
 
             </div>
         </form>
