--- a/ProjectCDTT_63132701/Content/chitietsanpham.css
+++ b/ProjectCDTT_63132701/Content/chitietsanpham.css
@@ -129,41 +129,50 @@ body {
 
 .btn-add-to-cart {
     background-color: white;
-    border: 3px solid #f5a8a8 !important; 
-    color: #f5a8a8; 
-    font-size: 10px;
-   
-    padding: 16px;
+    border: 3px solid #f5a8a8 !important;
+    color: #f5a8a8;
+    padding: 10px;
     border-radius: 12px;
     cursor: pointer;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 6px;
+    gap: 4px;
     width: 100px;
     height: 70px;
+    text-align: center;
+    overflow: hidden;
 }
 
-    .btn-add-to-cart i {
-        font-size: 15px; 
-        color: #f5a8a8; 
+    .btn-add-to-cart .top-row {
+        display: flex;
+        align-items: center;
+        gap: 4px;
     }
 
-    .btn-add-to-cart span {
-        font-size: 14px;
+    .btn-add-to-cart i {
+        font-size: 16px;
         color: #f5a8a8;
     }
 
+    .btn-add-to-cart .text-them,
+    .btn-add-to-cart .text-vao-gio {
+        font-size: 13px;
+        color: #f5a8a8;
+        line-height: 1;
+    }
 
     .btn-add-to-cart:hover {
         background-color: white;
     }
 
         .btn-add-to-cart:hover i,
-        .btn-add-to-cart:hover span {
+        .btn-add-to-cart:hover .text-them,
+        .btn-add-to-cart:hover .text-vao-gio {
             color: #f5a8a8;
         }
+
 
 
 @media (max-width: 768px) {
