--- a/ProjectCDTT_63132701/Content/dichvu.css
+++ b/ProjectCDTT_63132701/Content/dichvu.css
@@ -1,12 +1,15 @@
 ﻿/* Tiêu đề chính */
 h2 {
     color: #000000;
-    font-size: 24px;
+    font-size: 28px;
     font-weight: bold;
     margin: 30px 0 15px;
     text-align: center;
 }
-
+h5 {
+    margin: 20px auto;
+    margin-left: 150px;
+}
 /* Bảng */
 table {
     width: 80%;
