--- a/ProjectCDTT_63132701/Content/login.css
+++ b/ProjectCDTT_63132701/Content/login.css
@@ -1,4 +1,11 @@
 ﻿/* Định dạng tổng thể */
+html, body {
+    height: 1000%;
+    margin: 0;
+    padding: 0;
+   
+}
+
 .container {
     display: flex;
     justify-content: center;
