--- a/ProjectCDTT_63132701/Views/san_pham/BaoHanh.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/BaoHanh.cshtml
@@ -1,16 +1,17 @@
-﻿@{
-    ViewBag.Title = "DichVu";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+﻿
+@{
+    ViewBag.Title = "BaoHanh";
+    Layout = "~/Views/shared/_LayoutUser.cshtml";
 }
+
+<h2>Thông tin bảo hành</h2>
 <html>
 <head>
     <!-- Thư viện CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="~/css/Style.css">
     <link rel="stylesheet" href="~/Content/dichvu.css" />
-    <!-- Bootstrap JS và jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
@@ -18,7 +19,7 @@
 
 <body>
 
-    <h2>1. Dịch vụ bảo hành miễn phí</h2>
+    <h5>1. Dịch vụ bảo hành miễn phí</h5>
 
     <table>
         <thead>
@@ -56,7 +57,7 @@
     </table>
     <p class="table-note">Bảng 1</p>
 
-    <h2>2. Dịch vụ bảo hành tính phí</h2>
+    <h5>2. Dịch vụ bảo hành tính phí</h5>
 
     <table>
         <thead>
@@ -90,14 +91,17 @@
     <div class="note">
         <h3>LƯU Ý:</h3>
         <ul>
-            <li>Thời gian sửa chữa: 3 - 5 ngày làm việc (Nhẫn thay đai, sản phẩm thêm chi tiết 7 ngày làm việc).</li>
-            <li>Đối với các hoạt động bảo hành, Kim Yến áp dụng bảo hành điện tử bằng việc tra cứu thông tin trên hệ thống phần mềm.</li>
-            <li>Các dịch vụ bảo hành, sửa chữa sản phẩm (làm mới, chỉnh size,...) có thể giảm về trọng lượng so với ban đầu do bị hao mòn trong thời gian sử dụng và quy trình làm mới sản phẩm (<span class="highlight">Hạn mức hao mòn: 6%</span>).</li>
-            <li>bạc là kim loại mềm, dễ bị xước và không hình dạng khi đeo trong thời gian dài. Vui lòng không đeo trang sức trong lúc hoạt động mạnh và bê vác.</li>
+            <li>-Thời gian sửa chữa: 3 - 5 ngày làm việc (Nhẫn thay đai, sản phẩm thêm chi tiết 7 ngày làm việc).</li>
+            <li>-Đối với các hoạt động bảo hành, Kim Yến áp dụng bảo hành điện tử bằng việc tra cứu thông tin trên hệ thống phần mềm.</li>
+            <li>-Các dịch vụ bảo hành, sửa chữa sản phẩm (làm mới, chỉnh size,...) có thể giảm về trọng lượng so với ban đầu do bị hao mòn trong thời gian sử dụng và quy trình làm mới sản phẩm (<span class="highlight">Hạn mức hao mòn: 6%</span>).</li>
+            <li>-Bạc là kim loại mềm, dễ bị xước và không hình dạng khi đeo trong thời gian dài. Vui lòng không đeo trang sức trong lúc hoạt động mạnh và bê vác.</li>
+            <li>-Quý khách hàng có thể gửi sản phẩm về địa chỉ 66 Trần Quý Cáp, Diên Khánh, Khánh Hoà( cửa hàng sẽ <span class="highlight">hỗ trợ 30% phí vận chuyển cho lần đầu tiên</span> ).</li>
+            <li>-Mọi thông tin thắc mắc quý khách vui lòng liên hệ hotline của cửa hàng.</li>
         </ul>
     </div>
 
 </body>
 </html>
+
 
 
