--- a/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
+++ b/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
@@ -87,9 +87,17 @@
                 </ul>
             </li>
 
-            <li class="nav-item">
-                @Html.ActionLink("Dịch vụ", "../san_pham/DichVu", new { @class = "nav-link" })
-            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dịch vụ
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li>@Html.ActionLink("Bảo hành", "BaoHanh", "san_pham", new { }, new { @class = "dropdown-item" })</li>
+                    <li>@Html.ActionLink("Vận chuyển", "TTVanChuyen", "san_pham", new { }, new { @class = "dropdown-item" })</li>
+                    <li>@Html.ActionLink("Loại bạc", "LoaiBac", "san_pham", new { }, new { @class = "dropdown-item" })</li>
+
+                </ul>
+                </li>
             <li class="nav-item">
                 @Html.ActionLink("Khuyến mãi", "../san_pham/KhuyenMai", new { @class = "nav-link" })
             </li>
