--- a/ProjectCDTT_63132701/Views/tai_khoan/Register.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/Register.cshtml
@@ -1,8 +1,14 @@
-﻿
+﻿@model ProjectCDTT_63132701.Models.KhachHang
 @{
     ViewBag.Title = "Register";
     Layout = "~/Views/shared/_LayoutUser.cshtml";
 }
+
+<head>
+    <link rel="stylesheet" href="~/Content/login.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</head>
 
 <div class="container">
     <div class="form-box">
@@ -42,13 +48,12 @@
                     @ViewBag.Message
                 </div>
             }
-            <div class="button-container">
-                <button type="submit" class="btn btn-primary">Đăng ký</button>
 
+            <div class="button-container">
+                <button type="submit" class="btn btn-login">ĐĂNG KÝ</button>
             </div>
         }
-        <p>Đã có tài khoản? <a href="/Tai_khoan/Login">Đăng nhập</a></p>
 
+        <p>Đã có tài khoản? <a href="/Tai_khoan/Login">Đăng nhập</a></p>
     </div>
 </div>
-
