--- a/ProjectCDTT_63132701/Views/van_chuyen/Details.cshtml
+++ b/ProjectCDTT_63132701/Views/van_chuyen/Details.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Chi tiết vận chuyển";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+
     var rand = new Random();
     var daysToAdd = rand.Next(3, 5);
     var ngayTao = Model.NgayTao ?? DateTime.Now;
@@ -12,76 +13,76 @@
 
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="~/Content/create.css" />
+    <link rel="stylesheet" href="~/Content/details.css" />
 </head>
 
-<div class="form-wrapper">
+<div class="container">
     <a href="javascript:history.back()" class="back-button">
         <i class="fa-solid fa-chevron-left"></i> Quay lại
     </a>
-    <h2 class="mb-4">Chi tiết vận chuyển</h2>
+    <h2>Chi tiết vận chuyển</h2>
 
-    <div class="row">
-        <div class="col-md-12">
-            <dl class="row">
-                <dt class="col-sm-4">Khách hàng:</dt>
-                <dd class="col-sm-8">@Model.DonHang.KhachHang.HoTen</dd>
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <p><strong>Khách hàng:</strong> @Model.DonHang.KhachHang.HoTen</p>
+            <p><strong>Địa chỉ:</strong> @(Model.DiaChiChiTiet + ", " + Model.PhuongXa + ", " + Model.QuanHuyen + ", " + Model.TinhThanh)</p>
+            <p><strong>Đơn vị vận chuyển:</strong> @Model.DonViVanChuyen</p>
+            <p>
+                <strong>Trạng thái:</strong>
+                @if (Model.TrangThai == "Pending")
+                {
+                    <span>Chưa duyệt</span>
+                }
+                else if (Model.TrangThai == "Shipping")
+                {
+                    <span>Đang vận chuyển</span>
+                }
+                else if (Model.TrangThai == "Delivered")
+                {
+                    <span>Đã giao</span>
+                }
+                else if (Model.TrangThai == "Returned")
+                {
+                    <span>Đã trả lại</span>
+                }
+                else
+                {
+                    <span>@Model.TrangThai</span>
+                }
+            </p>
 
-                <dt class="col-sm-4">Địa chỉ:</dt>
-                <dd class="col-sm-8">
-                    @(Model.DiaChiChiTiet + ", " + @Model.PhuongXa + ", " + @Model.QuanHuyen + ", " + @Model.TinhThanh)
-                </dd>
-                
-                <dt class="col-sm-4">Đơn vị vận chuyển:</dt>
-                <dd class="col-sm-8">@Model.DonViVanChuyen</dd>
-
-                <dt class="col-sm-4">Trạng thái:</dt>
-                <dd class="col-sm-8">@Model.TrangThai</dd>
-
-                <dt class="col-sm-4">Ngày tạo:</dt>
-                <dd class="col-sm-8">
-                    @(Model.NgayTao.Value.ToString("dd/MM/yyyy"))
-                </dd>
-
-                <dt class="col-sm-4">Thời gian giao:</dt>
-                <dd class="col-sm-8">
-                    @ngayGiao.ToString("dd/MM/yyyy")
-                </dd>
-
-                <dt class="col-sm-4">Thời gian nhận:</dt>
-                <dd class="col-sm-8">
-                    @ngayNhan.ToString("dd/MM/yyyy")
-                </dd>
-
-
-            </dl>
-
-            <h3>Chi tiết đơn hàng</h3>
-            <table class="table table-bordered mt-4">
-                <thead>
-                    <tr>
-                        <th>Sản phẩm</th>
-                        <th>Đơn giá</th>
-                        <th>Số lượng</th>
-                        <th>Tổng tiền của sản phẩm</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var chiTiet in Model.DonHang.ChiTietDonHangs)
-                    {
-                        <tr>
-                            <td>@chiTiet.SanPham.TenSP</td>
-                            <td>@chiTiet.DonGia.ToString("N0") đ</td>
-                            <td>@chiTiet.SoLuong</td>
-                            <td>@(chiTiet.SoLuong * chiTiet.DonGia)</td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-            <h4>Tổng tiền (đã bao gồm phí ship):</h4>
-            <p>@String.Format("{0:N0} VNĐ", ViewBag.TongTienHoaDon)</p>
+        </div>
+        <div class="col-md-6">
+            <p><strong>Ngày tạo:</strong> @ngayTao.ToString("dd/MM/yyyy")</p>
+            <p><strong>Thời gian giao:</strong> @ngayGiao.ToString("dd/MM/yyyy")</p>
+            <p><strong>Thời gian nhận:</strong> @ngayNhan.ToString("dd/MM/yyyy")</p>
         </div>
     </div>
 
+    <h3>Chi tiết đơn hàng</h3>
+    <table class="table table-bordered mt-4">
+        <thead>
+            <tr>
+                <th>Sản phẩm</th>
+                <th>Đơn giá</th>
+                <th>Số lượng</th>
+                <th>Tổng tiền của sản phẩm</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var chiTiet in Model.DonHang.ChiTietDonHangs)
+            {
+                <tr>
+                    <td>@chiTiet.SanPham.TenSP</td>
+                    <td>@chiTiet.DonGia.ToString("N0") đ</td>
+                    <td>@chiTiet.SoLuong</td>
+                    <td>@(chiTiet.SoLuong * chiTiet.DonGia)</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+    <div class="d-flex justify-content-end" style="margin-bottom: 50px;">
+        <h4>Tổng tiền (đã bao gồm phí ship): @String.Format("{0:N0} ₫", ViewBag.TongTienHoaDon)</h4>
+    </div>
 </div>
