--- a/ProjectCDTT_63132701/Views/don_hang/Index.cshtml
+++ b/ProjectCDTT_63132701/Views/don_hang/Index.cshtml
@@ -16,7 +16,7 @@
 
     <div class="row mt-4">
         <div class="col-md-6">
-            <p><strong>Họ Tên Khách Hàng:</strong> @Model.KhachHang.HoTen</p>
+            <p><strong>Họ Tên :</strong> @Model.KhachHang.HoTen</p>
             <p><strong>Email:</strong> @Model.KhachHang.Email</p>
             <p><strong>Số điện thoại:</strong> @Model.KhachHang.SoDienThoai</p>
         </div>
