--- a/ProjectCDTT_63132701/Views/Van_chuyen/QLVC.cshtml
+++ b/ProjectCDTT_63132701/Views/Van_chuyen/QLVC.cshtml
@@ -24,7 +24,7 @@
             <th>Địa chỉ cụ thể</th>
             <th>Trạng thái</th>
             <th>Đơn vị vận chuyển</th>
-            <th>Giá vận chuyển</th>
+            <th>Tổng tiền</th>
             <th>Hành động</th>
         </tr>
     </thead>
@@ -39,15 +39,15 @@
                 <td>@Html.DisplayFor(modelItem => item.DiaChiChiTiet)</td>
                 <td>@Html.DisplayFor(modelItem => item.TrangThai)</td>
                 <td>@Html.DisplayFor(modelItem => item.DonViVanChuyen)</td>
-                <td>@Html.DisplayFor(modelItem => item.GiaVanChuyen)</td>
+                <td>@String.Format("{0:N0} đ", item.GiaVanChuyen)</td>
                 <td>
-                    <a href="@Url.Action("Details", new { id = item.MaVanChuyen})" class="btn btn-info btn-sm">
+                    <a href="@Url.Action("Details", new { id = item.MaVanChuyen })" class="btn btn-info btn-sm" title="Xem chi tiết">
                         <i class="fas fa-eye"></i>
                     </a>
-                    <a href="@Url.Action("Edit","Van_chuyen" , new { id = item.MaVanChuyen })" class="btn btn-warning btn-sm">
+                    <a href="@Url.Action("Edit", "Van_chuyen", new { id = item.MaVanChuyen })" class="btn btn-warning btn-sm" title="Chỉnh sửa">
                         <i class="fas fa-edit"></i>
                     </a>
-                    <a href="@Url.Action("Delete", new { id = item.MaVanChuyen })" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc muốn xóa sản phẩm này?');">
+                    <a href="@Url.Action("Delete", new { id = item.MaVanChuyen })" class="btn btn-danger btn-sm" title="Xóa" onclick="return confirm('Bạn có chắc muốn xóa sản phẩm này?');">
                         <i class="fas fa-trash"></i>
                     </a>
                 </td>
