--- a/ProjectCDTT_63132701/Views/don_hang/Edit.cshtml
+++ b/ProjectCDTT_63132701/Views/don_hang/Edit.cshtml
@@ -18,61 +18,66 @@
     </a>
     <h2>Chỉnh sửa đơn hàng </h2>
 
-    <div class="row mt-4">
-        <!-- Thông tin Khách hàng -->
-        <div class="col-md-6">
-            <p><strong>Họ Tên Khách Hàng:</strong> @Model.KhachHang.HoTen</p>
-            <p><strong>Email:</strong> @Model.KhachHang.Email</p>
-            <p><strong>Số điện thoại:</strong> @Model.KhachHang.SoDienThoai</p>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.MaDH)
+        <div class="row mt-4">
+            <!-- Thông tin Khách hàng -->
+            <div class="col-md-6">
+                <p><strong>Họ Tên Khách Hàng:</strong> @Model.KhachHang.HoTen</p>
+                <p><strong>Email:</strong> @Model.KhachHang.Email</p>
+                <p><strong>Số điện thoại:</strong> @Model.KhachHang.SoDienThoai</p>
+            </div>
+
+            <!-- Thông tin Đơn hàng -->
+            <div class="col-md-6">
+                <p><strong>Mã Đơn Hàng:</strong> @Model.MaDH</p>
+                <p><strong>Ngày Tạo Đơn:</strong> @(Model.NgayTao.HasValue ? Model.NgayTao.Value.ToString("dd/MM/yyyy") : "Không có thông tin")</p>
+                <p>
+                    <strong>Trạng Thái Đơn Hàng:</strong>
+                    @Html.DropDownListFor(model => model.DonHang.TrangThai, new SelectList(
+                 new List<string> { "Pending", "Confirmed", "Processing", "Shipping", "Completed", "Cancelled" },
+                 Model.DonHang.TrangThai), new { @class = "form-control" })
+                </p>
+            </div>
         </div>
 
-        <!-- Thông tin Đơn hàng -->
-        <div class="col-md-6">
-            <p><strong>Mã Đơn Hàng:</strong> @Model.MaDH</p>
-            <p><strong>Ngày Tạo Đơn:</strong> @(Model.NgayTao.HasValue ? Model.NgayTao.Value.ToString("dd/MM/yyyy") : "Không có thông tin")</p>
-            <p>
-                <strong>Trạng Thái Đơn Hàng:</strong>
-                @Html.DropDownListFor(model => model.DonHang.TrangThai, new SelectList(
-                    new List<string> { "Pending", "Confirmed", "Processing", "Shipping", "Completed", "Cancelled" },
-                    Model.DonHang.TrangThai), new { @class = "form-control" })
-            </p>
-        </div>
-    </div>
-
-    <h3>Chi Tiết Đơn Hàng</h3>
-    <table class="table table-bordered mt-4">
-        <thead>
-            <tr>
-                <th>Sản phẩm</th>
-                <th>Đơn giá</th>
-                <th>Số lượng</th>
-                <th>Tổng tiền của sản phẩm</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var chiTiet in Model.ChiTietHoaDons)
-            {
+        <h3>Chi Tiết Đơn Hàng</h3>
+        <table class="table table-bordered mt-4">
+            <thead>
                 <tr>
-                    <td>@chiTiet.SanPham.TenSP</td>
-                    <td>@chiTiet.Gia.ToString("N0") đ</td>
-                    <td>@chiTiet.SoLuong</td>
-                    <td>@(chiTiet.SoLuong * chiTiet.Gia)</td>
+                    <th>Sản phẩm</th>
+                    <th>Đơn giá</th>
+                    <th>Số lượng</th>
+                    <th>Tổng tiền của sản phẩm</th>
                 </tr>
-            }
-        </tbody>
-    </table>
-    <div class="d-flex justify-content-end">
-        <h4>Tổng Tiền: @String.Format("{0:N0} ₫", Model.TongTien) </h4>
-    </div>
-
-    <!-- Form để chỉnh sửa thông tin đơn hàng -->
-    <div class="text-center mt-4">
-        <div class="d-inline-flex gap-2">
-            <button type="submit" class="btn-submit">
-                <i class="fa-solid fa-check"></i> Lưu thông tin
-            </button>
-
-            @Html.ActionLink("Hủy", "QLDH", null, new { @class = " btn-cancel text-decoration-none" })
+            </thead>
+            <tbody>
+                @foreach (var chiTiet in Model.ChiTietHoaDons)
+                {
+                    <tr>
+                        <td>@chiTiet.SanPham.TenSP</td>
+                        <td>@chiTiet.Gia.ToString("N0") đ</td>
+                        <td>@chiTiet.SoLuong</td>
+                        <td>@(chiTiet.SoLuong * chiTiet.Gia)</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <div class="d-flex justify-content-end">
+            <h4>Tổng Tiền: @String.Format("{0:N0} ₫", Model.TongTien) </h4>
         </div>
-    </div>
+
+        <!-- Form để chỉnh sửa thông tin đơn hàng -->
+        <div class="text-center mt-4">
+            <div class="d-inline-flex gap-2">
+                <button type="submit" class="btn-submit">
+                    <i class="fa-solid fa-check"></i> Lưu thông tin
+                </button>
+
+                @Html.ActionLink("Hủy", "QLDH", null, new { @class = " btn-cancel text-decoration-none" })
+            </div>
+        </div>
+    }
 </div>
