--- a/ProjectCDTT_63132701/Views/san_pham/Index.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Index.cshtml
@@ -1,20 +1,17 @@
-﻿@{
+﻿@model ProjectCDTT_63132701.Models.HomeIndexViewModel
+@{
     ViewBag.Title = "Home Page";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
 <head>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap JavaScript (cần thiết cho carousel) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="~/Content/Home.css" />
 </head>
 
-<!-- Banner -->
 <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-        <!-- Slide 1 -->
         <div class="carousel-item active" data-bs-interval="3000">
             <img src="~/Images/bia1.jpg" alt="Trang Sức Cao Cấp" class="d-block w-100 banner-img">
             <div class="carousel-caption d-flex flex-column align-items-start text-white">
@@ -24,7 +21,6 @@
             </div>
         </div>
 
-        <!-- Slide 2 -->
         <div class="carousel-item" data-bs-interval="3000">
             <img src="~/Images/bia2.jpg" alt="Trang Sức Hiện Đại" class="d-block w-100 banner-img">
             <div class="carousel-caption d-flex flex-column align-items-start text-white">
@@ -34,7 +30,6 @@
             </div>
         </div>
 
-        <!-- Slide 3 -->
         <div class="carousel-item" data-bs-interval="3000">
             <img src="~/Images/bia3.jpg" alt="Trang Sức Sang Trọng" class="d-block w-100 banner-img">
             <div class="carousel-caption d-flex flex-column align-items-start text-white">
@@ -45,7 +40,6 @@
         </div>
     </div>
 
-    <!-- Nút điều hướng -->
     <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     </button>
@@ -54,10 +48,6 @@
     </button>
 </div>
 
-
-
-
-<!-- Danh mục nổi bật -->
 <section class="featured py-5">
     <div class="container">
         <h2 class="text-center mb-4">MUA SẮM THEO DANH MỤC</h2>
@@ -78,18 +68,11 @@
     </div>
 </section>
 
-
-
-
-
-
-
-<!-- Bộ sưu tập mới -->
 <section class="trendy-collection py-5 bg-light">
     <div class="container">
         <h2 class="text-center mb-4">BỘ SƯU TẬP MỚI</h2>
         <div class="product-container">
-            @foreach (var product in Model)
+            @foreach (var product in Model.NewestProducts)
             {
                 <div class="product-card">
                     <img src="~/Images/@product.AnhSanPham" alt="@product.TenSP">
@@ -120,21 +103,17 @@
         <td class="text-center"><a href="@Url.Action("ThuongHieu", "San_pham")">Lịch sử thương hiệu</a></td>
         <td><img src="~/Images/shop5.jpg" class="table-img" /></td>
         <td class="text-center">
-            <a href="@Url.Action("DichVu", "TrangChu")">Chính sách vận chuyển</a>
+            <a href="@Url.Action("TTVanChuyen", "San_pham")">Chính sách vận chuyển</a>
         </td>
         <td><img src="~/Images/mau12.jpg" class="table-img" /></td>
     </tr>
 </table>
 
-
-
-
-<!-- Bộ sưu tập mùa hè -->
 <section class="autumn-collection py-5">
     <div class="container">
         <h2 class="text-center mb-4">BỘ SƯU TẬP MÙA HÈ</h2>
         <div class="product-container">
-            @foreach (var product in Model)
+            @foreach (var product in Model.OldestProducts)
             {
                 <div class="product-card">
                     <img src="~/Images/@product.AnhSanPham" alt="@product.TenSP">
@@ -147,7 +126,7 @@
             }
         </div>
     </div>
-</section>
+</section>  
 
 
 
