--- a/ProjectCDTT_63132701/Views/san_pham/Create.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Create.cshtml
@@ -67,7 +67,9 @@
         <!-- Thêm div wrapper cho nút "Thêm sản phẩm" để tách nó khỏi các cột -->
         <div class="form-row">
             <div class="col-md-12 text-center">
-                <button type="submit" class="btn btn-new ">Thêm sản phẩm</button>
+                <button type="submit" class="btn btn-new ">
+                    <i class="fa-solid fa-check"></i> Thêm sản phẩm
+                </button>
             </div>
         </div>
     </div>
