--- a/ProjectCDTT_63132701/Views/san_pham/ThuongHieu.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ThuongHieu.cshtml
@@ -65,8 +65,10 @@
                 <div class="col-md-6">
                     <h2>NHỮNG CÂU CHUYỆN HẠNH PHÚC</h2>
                     <p>
-                        Mỗi mẫu trang sức không chỉ là một món phụ kiện, mà còn là một câu chuyện đầy cảm xúc.
-                        Với KIM YẾN Jewelry, chúng tôi luôn mong muốn đồng hành cùng bạn trong từng khoảnh khắc đáng nhớ.
+
+                        Mỗi mẫu trang sức không chỉ đơn thuần là một món phụ kiện, mà là tiếng vọng của những xúc cảm – nơi lưu giữ những dấu ấn yêu thương, những kỷ niệm không thể phai mờ. Tại KIM YẾN Jewelry, chúng tôi tin rằng trang sức là cách tinh tế nhất để nói lời yêu thương, để ghi dấu một ánh nhìn, một cái ôm, hay một lời hứa vĩnh cửu.
+                        Từng thiết kế được thổi hồn bằng sự tỉ mỉ và đam mê, để không chỉ làm đẹp cho vẻ ngoài, mà còn chạm tới trái tim người sở hữu.
+                        Hãy để KIM YẾN Jewelry cùng bạn viết tiếp những chương đẹp nhất trong hành trình cuộc sống – nơi mọi khoảnh khắc đều xứng đáng được nâng niu và tỏa sáng.
                     </p>
                 </div>
                 <div class="col-md-6">
@@ -81,19 +83,48 @@
         <div class="container">
             <h2>BẠC CAO CẤP</h2>
             <p class="mb-4">Trang sức Bạc lấp lánh, sang trọng và quý phái.</p>
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="~/Images/mau3.jpg" alt="Diamond Ring" class="img-fluid rounded shadow">
+
+            <div id="multiItemCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="~/Images/mau3.jpg" class="d-block w-100 rounded shadow" alt="Diamond Ring">
+                            </div>
+                            <div class="col-md-4">
+                                <img src="~/Images/12.jpg" class="d-block w-100 rounded shadow" alt="Bracelet">
+                            </div>
+                            <div class="col-md-4">
+                                <img src="~/Images/mau17.jpg" class="d-block w-100 rounded shadow" alt="Bracelet">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="~/Images/13.jpg" class="d-block w-100 rounded shadow" alt="Necklace">
+                            </div>
+                            <div class="col-md-4">
+                                <img src="~/Images/15.jpg" class="d-block w-100 rounded shadow" alt="Earrings">
+                            </div>
+                            <div class="col-md-4">
+                                <img src="~/Images/16.jpg" class="d-block w-100 rounded shadow" alt="Bracelet">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <img src="~/Images/12.jpg" alt="Bracelet" class="img-fluid rounded shadow">
-                </div>
-                <div class="col-md-4">
-                    <img src="~/Images/mau17.jpg" alt="Bracelet" class="img-fluid rounded shadow">
-                </div>
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#multiItemCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#multiItemCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
             </div>
         </div>
     </section>
+
+
 
     <!-- Chứng nhận & Bảo hành -->
     <section class="certification-warranty text-center py-5 bg-light">
@@ -152,7 +183,7 @@
                     <div class="image-container">
                         <img src="~/Images/mau28.jpg" alt="Dây chuyền bạc khác" class="img-fluid rounded shadow">
                         <div class="overlay">
-                            <div class="text">Hãy nhớ rằng, mỗi ngày là một cơ hội mới để thay đổi mọi thứ</div>
+                            <div class="text">Mỗi ngày là một cơ hội mới để thay đổi, làm mới bản thân và bắt đầu hành trình khác.</div>
                         </div>
                     </div>
                 </div>
