--- a/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
+++ b/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
@@ -19,7 +19,7 @@
         <div class="header-container">
             <!-- Tìm kiếm -->
             <div class="header-left">
-                <i class="fas fa-map-marker-alt"></i>
+                <i class="fas fa-search"></i>
                 <input type="text" placeholder="Tìm kiếm">
             </div>
 
@@ -50,6 +50,7 @@
                         </span>
                     </a>
                 </div>
+
                 <div>
                     @if (Session["UserId"] == null)
                     {
