--- a/ProjectCDTT_63132701/Views/van_chuyen/Details.cshtml
+++ b/ProjectCDTT_63132701/Views/van_chuyen/Details.cshtml
@@ -20,7 +20,7 @@
     <a href="javascript:history.back()" class="back-button">
         <i class="fa-solid fa-chevron-left"></i> Quay lại
     </a>
-    <h2>Chi tiết vận chuyển</h2>
+    <h2>Chi tiết đơn vận chuyển</h2>
 
     <div class="row mt-4">
         <div class="col-md-6">
