--- a/ProjectCDTT_63132701/Views/tai_khoan/Login.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/Login.cshtml
@@ -5,12 +5,18 @@
 }
 <head>
     <link rel="stylesheet" href="~/Content/login.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<div class="container">
-    <div class="form-box">
-        <h2>ĐĂNG NHẬP</h2>
+
+<div class="login-wrapper">
+    <div class="login-container">
+        <div class="login-left">
+            <div class="login-image">
+                <img src="~/images/mau29.jpg" alt="trang sức cao cấp" class="img-fluid" />
+            </div>
+        </div>
+<div class="login-right">
+    <div class="login-form-wrapper">
+        <h5>ĐĂNG NHẬP</h5>
         @using (Html.BeginForm("Login", "Tai_khoan", FormMethod.Post))
         {
             @Html.AntiForgeryToken()
@@ -25,12 +31,13 @@
                 <input type="password" name="password" class="form-control" id="password" placeholder="Nhập mật khẩu" required />
             </div>
 
+
             <div class="button-container">
                 <button type="submit" class="btn btn-login">ĐĂNG NHẬP</button>
-
             </div>
         }
-
         <p>Chưa có tài khoản? <a href="/Tai_khoan/Register">Đăng ký</a></p>
+    </div>
+</div>
     </div>
 </div>
