--- a/ProjectCDTT_63132701/Views/tai_khoan/Register.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/Register.cshtml
@@ -3,57 +3,74 @@
     ViewBag.Title = "Register";
     Layout = "~/Views/shared/_LayoutUser.cshtml";
 }
-
 <head>
     <link rel="stylesheet" href="~/Content/login.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<div class="container">
-    <div class="form-box">
-        <h2>Đăng ký tài khoản</h2>
-        @using (Html.BeginForm("Register", "Tai_khoan", FormMethod.Post))
-        {
-            @Html.AntiForgeryToken()
+<div class="login-wrapper">
+    <div class="login-container">
+        <div class="login-left">
+            <div class="login-image">
+                <img src="~/images/mau29.jpg" alt="trang sức cao cấp" class="img-fluid" />
+            </div>
+        </div>
+        <div class="login-right">
+            <div class="login-form-wrapper">
+                <h5>ĐĂNG KÝ TÀI KHOẢN</h5>
+                @using (Html.BeginForm("Register", "Tai_khoan", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="row">
+                        <!-- Cột trái -->
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="hoTen">Họ và tên</label>
+                                <input type="text" name="hoTen" class="form-control" id="hoTen" placeholder="Nhập họ tên" required />
+                            </div>
 
-            <div class="form-group">
-                <label for="hoTen">Họ và tên</label>
-                <input type="text" name="hoTen" class="form-control" id="hoTen" placeholder="Nhập họ tên" required />
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" class="form-control" id="email" placeholder="Nhập email" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="matKhau">Mật khẩu</label>
+                                <input type="password" name="matKhau" class="form-control" id="matKhau" placeholder="Nhập mật khẩu" required />
+                            </div>
+
+
+
+                        </div>
+
+                        <!-- Cột phải -->
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="soDienThoai">Số điện thoại</label>
+                                <input type="text" name="soDienThoai" class="form-control" id="soDienThoai" placeholder="Nhập số điện thoại" required />
+                            </div>
+
+                            <div class="form-group">
+                                <label for="diaChi">Địa chỉ</label>
+                                <textarea name="diaChi" class="form-control" id="diaChi" placeholder="Nhập địa chỉ" style="height: 130px;"></textarea>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="button-container ">
+                        <button type="submit" class="btn btn-new">ĐĂNG KÝ</button>
+                    </div>
+                    if (ViewBag.Message != null)
+                    {
+                        <div class="alert mt-3">
+                            @ViewBag.Message
+                        </div>
+                    }
+                }
+
+                <p> Đã có tài khoản? <a href="/Tai_khoan/Login">Đăng nhập</a></p>
             </div>
 
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" name="email" class="form-control" id="email" placeholder="Nhập email" required />
-            </div>
-
-            <div class="form-group">
-                <label for="soDienThoai">Số điện thoại</label>
-                <input type="text" name="soDienThoai" class="form-control" id="soDienThoai" placeholder="Nhập số điện thoại" required />
-            </div>
-
-            <div class="form-group">
-                <label for="diaChi">Địa chỉ</label>
-                <textarea name="diaChi" class="form-control" id="diaChi" placeholder="Nhập địa chỉ"></textarea>
-            </div>
-
-            <div class="form-group">
-                <label for="matKhau">Mật khẩu</label>
-                <input type="password" name="matKhau" class="form-control" id="matKhau" placeholder="Nhập mật khẩu" required />
-            </div>
-
-            if (ViewBag.Message != null)
-            {
-                <div class="alert">
-                    @ViewBag.Message
-                </div>
-            }
-
-            <div class="button-container">
-                <button type="submit" class="btn btn-login">ĐĂNG KÝ</button>
-            </div>
-        }
-
-        <p>Đã có tài khoản? <a href="/Tai_khoan/Login">Đăng nhập</a></p>
+        </div>
     </div>
 </div>
